# complex-code-spotter

./: Cargo.toml  README.md  markdown.md
.github/workflows/: complex-code-spotter.yml  deploy.yml
.reuse/: dep5
src/: concurrent.rs  error.rs  lib.rs  metrics.rs  output.rs  snippets.rs
src/cli/: mod.rs
templates/: index.html  markdown.md  web.html
tests/: mod.rs
tests/snapshots/high_thresholds/: data_seahorse_src_command.rs.snap  data_seahorse_src_context.rs.snap
tests/snapshots/low_thresholds/: data_seahorse_src_app.rs.snap  data_seahorse_src_command.rs.snap  data_seahorse_src_context.rs.snap  data_seahorse_src_error.rs.snap  data_seahorse_src_flag.rs.snap
