[package]
name = "complex-code-spotter"
version = "0.1.0"
description = """
Extracts code snippets which are deemed complex according to some specific
metrics.
"""
repository = "https://github.com/sifis-home/complex-code"
keywords = ["code-complexity", "code-snippets"]
license = "MIT"
edition = "2021"

[[bin]]
name = "complex-code-spotter"

[dependencies]
cargo_metadata = "^0.18"
clap = { version = "^4.4", features = ["derive"] }
crossbeam = "^0.8"
encoding_rs = "^0.8"
globset = "^0.4"
minijinja = "^1"
rust-code-analysis = "^0.0.25"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
walkdir = "^2.3"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
